tests/cases/control-flow/ok/for-range-edges.ari
fn main() -> i64 {
  var total = 0;
  for _ in range(3, 3) {
    total = total + 100;
  }
  for _ in range(0, 3) {
    total = total + 2;
  }
  for value in iter::range(1, 4) {
    total = total + value;
  }
  return total;
}
