tests/cases/control-flow/errors/for-vector-empty.ari
fn main() -> i64 {
  var total = 0;
  for value in [] {
    total = total + value;
  }
  return total;
}
